[package]
name = "userfaultfd"
version = "0.4.2"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Linux userfaultfd functionality"
repository = "https://github.com/fastly/userfaultfd-rs"
readme = "README.md"

[dependencies]
bitflags = "1.0"
cfg-if = "^1.0.0"
rustix = { path = "../rustix" }
thiserror = "1.0.4"

[features]
default = []
linux4_14 = []
linux5_7 = []
